--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 
 \title{Analysing the effect of switch positions on power grid stability and development of optimal switch state optimizer}
 
-\author{Sidney Pauly\inst{1} \inst{2}\\ Supervisors: Dr. Nicolas Rubido\inst{1} Dr. Christian Koehler\inst{2}}
+\author{Sidney Pauly\inst{1} \inst{2}\\ Supervisors: Dr. Nicol\'as Rubido\inst{1} Dr. Christian K\"ohler\inst{2}}
 
 \institute[shortinst]{\inst{1} University of Aberdeen \samelineand \inst{2} Venios GmbH}
 
